third_party/move/move-compiler-v2/tests/checking/specs/use_erroneous_schema.exp

Diagnostics:
error: undeclared `M::x`
  ┌─ tests/checking/specs/use_erroneous_schema.move:5:17
  │
5 │         ensures x > 0;
  │                 ^

error: invalid call of `<`: expected `num` but found `bool` for argument 2
   ┌─ tests/checking/specs/use_erroneous_schema.move:13:21
   │
13 │         ensures 2 < true;
   │                     ^^^^
